
libnetincludedir = $(includedir)/libnet
 
libnetinclude_HEADERS = libnet/libnet-asn1.h \
                        libnet/libnet-functions.h \
                        libnet/libnet-headers.h \
                        libnet/libnet-macros.h \
                        libnet/libnet-structures.h \
                        libnet/libnet-types.h

nodist_include_HEADERS = libnet.h

EXTRA_DIST = bpf.h gnuc.h ifaddrlist.h

